1. Modify the Homepage 2. Modify the navbar 3. Modify the product page 4. Fix the bug that user cannot choose the rating star when he/she want to submit a review

--- a/app/stylesheets/Navbar.scss
+++ b/app/stylesheets/Navbar.scss
@@ -4,13 +4,13 @@
   top: 0;
   width: 100%;
   border-radius: 0;
-  background: none;
-  border: none;	  
+  background: #BEBEBE;
+  border: none;
   box-shadow: none;
   z-index: 1000;
 }
 
-	
+
 
 // 	a {
 // 		margin: 0.5em;
@@ -20,7 +20,7 @@
 // 		width: 33%;
 // 		padding: 0 5% !important;
 // 		line-height: 4em;
-// 		display: inline-block;		
+// 		display: inline-block;
 // 	}
 
 // 	ul {
@@ -33,12 +33,12 @@
 //     }
 //     &.left-align li {
 //     	float: left;
-//     }    
+//     }
 // 	}
 
 // 	.iconmenu-wrapper {
 // 		font-size: 1.4em;
-// 	}	
+// 	}
 
 // 	.menu-wrapper {
 // 		li .submenu-wrapper {
@@ -47,7 +47,7 @@
 // 		}
 // 		li:hover{
 // 			.submenu-wrapper{
-// 				display: block;	
+// 				display: block;
 // 			}
 // 		}
 // 	}
@@ -71,8 +71,8 @@
 // 	}
 // 	.search-wrapper{
 
-// 		.form-wrapper {						
-			
+// 		.form-wrapper {
+
 // 			form input {
 // 				font-size: 14px;
 // 				border-color: #909090;
@@ -82,7 +82,7 @@
 
 // 			}
 // 		}
-		
+
 // 		a.close-toggle, .form-wrapper {
 // 			display: none;
 // 		}
@@ -111,7 +111,7 @@
 // 			color: white
 // 		}
 // 	}
-	
+
 // 	&.background {
 // 		background-color: white;
 // 		.logo {
@@ -122,5 +122,5 @@
 // 				color: black
 // 			}
 // 		}
-// 	}	
+// 	}
 // }
