--- a/app/stylesheets/Products.scss
+++ b/app/stylesheets/Products.scss
@@ -1,12 +1,18 @@
 .product-grid{
 	.image-wrapper {
 		img {
-			width: 100%
+			width: 200px;
+			height: 200px;
+			margin-left: 100px;
+			margin-bottom: 50px;
+			//padding: 0 100px;
+			//background-size: 50% auto;
 		}
 	}
 	.product-info {
 		text-align: center;
-    margin-top: -35px;
+    margin-top: -45px;
+		margin-bottom: 10px;
 		span {
 			font-size: 1.1em
 		}
@@ -16,11 +22,8 @@
 .product-detail{
 
 	.product-info {
-		.row {
-			margin: 10px 0;
-		}
 		.name {
-			font-size: 3em;
+			font-size: 2em;
 		}
 		.price {
 			font-size: 2.5em;
@@ -30,21 +33,17 @@
 
 		.tab-content {
 			ul {
-				padding: 20px 0 20px 20px;
     		list-style-type: circle;
-			}
-			p {
-		    padding: 20px 0;
 			}
 		}
 	}
 	.product-image {
 		.image-slide {
 			z-index: 100;
-			height: 500px;
+			height: 300px;
 			background-image: url('http://cdn.shopify.com/s/files/1/0236/9929/products/StLouis-MatteBlack-Website-Front_1024x1024.png?v=1480979437');
-			background-position: center;
-			background-size: 100% auto;
+			background-position: left;
+			background-size: 50% auto;
 			background-repeat: no-repeat;
 		}
 	}
@@ -78,7 +77,7 @@
 }
 
 #product-review-tab{
-	.review{	
+	.review{
 		.dv-star-rating {
 			display: inline-block;
 	    position: relative;
