1. Influencer account done 2. create campaign 3. Upload image to cloudinary 4. refine layout 5.select influencer 6. account control

--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -10,3 +10,7 @@
 @import './Products.scss';
 @import './Cart.scss';
 @import './Users.scss';
+
+@import './grid.scss';
+@import './animate.scss';
+@import './variables.scss';
