--- a/app/stylesheets/style.scss
+++ b/app/stylesheets/style.scss
@@ -10,7 +10,8 @@
 @import './Products.scss';
 @import './Cart.scss';
 @import './Users.scss';
-
+@import './stylesheet.scss';
+@import './styles.scss';
 @import './grid.scss';
 @import './animate.scss';
 @import './variables.scss';
