--- a/app/stylesheets/Navbar.scss
+++ b/app/stylesheets/Navbar.scss
@@ -4,10 +4,11 @@
   top: 0;
   width: 100%;
   border-radius: 0;
-  background: #BEBEBE;
+  background: #ECEFF1;
   border: none;
   box-shadow: none;
   z-index: 1000;
+  font-size: 15px;
 }
 
 
