--- a/app/stylesheets/messager.scss
+++ b/app/stylesheets/messager.scss
@@ -1,7 +1,7 @@
 
 #message_container li { padding: 5px 10px; opacity: 0.7;}
 #message_container li:nth-child(odd) {  }
-#message_container li.welcome {color: #59b2ac; }
+#message_container li.welcome {color: #64B5F6; }
 #message_container li.joined { color: #2ECC40;}
 #message_container li.left { color: red; }
 #message_container li.changed { color: #FF851B; }
@@ -24,7 +24,7 @@
     padding: 1em 10em;
     background-color: #fff;
     background-image:
-            linear-gradient(90deg, transparent 1px, #abced4 50px, #abced4 81px, transparent 81px),
+            linear-gradient(90deg, transparent 1px, #abced4 80px, #abced4 30px, transparent 81px),
             linear-gradient(#eee .1em, transparent .1em);
     background-size: 100% 1.2em;
 }
